@@ -387,6 +387,12 @@ WxGetColourFromUser(int argc, VALUE *argv, VALUE self)
     return WxColour::init0(wxGetColourFromUser(parent,colInit));
 }
 
+static void
+WxInitAllImageHandlers(VALUE self)
+{
+    wxInitAllImageHandlers();
+}
+
 void DefineModuleMethods()
 {
     rb_define_module_function(GetWxModule(), "message_box", VALUEFUNC(WxMessageBox), -1);
@@ -417,5 +423,6 @@ void DefineModuleMethods()
     rb_define_module_function(GetWxModule(), "load_file_selector", VALUEFUNC(WxLoadFileSelector), -1);
     rb_define_module_function(GetWxModule(), "save_file_selector", VALUEFUNC(WxSaveFileSelector), -1);
     rb_define_module_function(GetWxModule(), "get_colour_from_user", VALUEFUNC(WxGetColourFromUser), -1);
+    rb_define_module_function(GetWxModule(), "init_all_image_handlers", VALUEFUNC(WxInitAllImageHandlers), 0);
 
 }
